--- a/styles/i_love.css
+++ b/styles/i_love.css
@@ -4,21 +4,78 @@ body {
   background-color: rgb(235, 235, 235);
 }
 
+.header-image {
+  height: 2rem;
+}
+
+.shirt-image-container img {
+  height: 100%;
+  width: 100%;
+}
+
+.switch-container {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+}
+
+.shirt-image-container {
+  position: relative;
+  text-align: center;
+}
+.shirt-image-text {
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  padding: 10px;
+  font-size: 1rem;
+  min-width: 100px;
+  text-align: center;
+  z-index: 1;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  color: black;
+  box-shadow: none;
+}
+
+.footer ul {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+.footer li {
+  float: left;
+}
+.footer a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.save-item-text {
+  text-align: center;
+}
+
+.paypal-container p {
+  position: relative;
+  text-align: center;
+}
+/*
+
 .container {
   position: relative;
   width: 100%;
   height: 100vh;
-}
-
-.top-left {
-  position: absolute;
-  top: 20px;
-  left: 5px;
-}
-.top-left a {
-  display: inline-block;
-  width: 25%;
-  height: 25%;
 }
 
 .centered {
@@ -32,11 +89,6 @@ body {
 .image-container {
   position: relative;
   display: inline-block;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
 }
 
 input {
@@ -56,19 +108,6 @@ input {
   box-shadow: none;
 }
 
-.switch-container {
-  position: absolute;
-  top: 18%;
-  left: 50%;
-  transform: translateX(-50%); /* Center the switch horizontally */
-}
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
 
 .switch input {
   opacity: 0;
@@ -131,3 +170,4 @@ button {
   left: 50%;
   transform: translateX(-50%);
 }
+*/
